# comic-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEVLOG.md  Dockerfile  README.md  Tiltfile  VR_GUIDE.md  docker-compose.yml  eslint.config.js  index.html  notes.md  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite-plugin-scene-exporter.js  vite.config.js
.claude/: base-backend.md  base-frontend.md  base.md
.claude/skills/: scene-composition.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pr-lint.yml  release.yml  security.yml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
backend/comic_engine/adapters/: depth_anything.py
backend/comic_engine/core/: depth.py  image_utils.py  ports.py
backend/tests/: conftest.py  test_app.py  test_depth.py  test_depth_anything.py  test_image_utils.py
docs/: POSITIONING.md  scenes.md
docs/architecture/: reader-editor-parity.md
e2e/: app.test.js
public/scenes/: .gitkeep
src/: App.jsx  main.jsx
src/__tests__/: App.test.jsx  JournalPage.test.jsx  parser.test.js  sceneGenerator.test.js  vitePluginPublish.test.js  vitePluginSceneExporter.test.js
src/components/: DepthSegmentationDemo.jsx  SceneViewer.jsx
src/hooks/: useComicBook.js  useImageUpload.js  useLocalPages.js  usePages.js  useSceneLoader.js  useThemeTriggers.js  useZScroll.js
templates/: example-export.json  obsidian-comic-template.md
(+107 files in other folders)
